--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/ppt.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Introduction</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -63,7 +63,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Guides</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -72,7 +72,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Training</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -81,7 +81,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Solution</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -117,7 +117,7 @@
 										</div>
 										<div class="col-3 col-12-medium	">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Experimental objects</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -126,7 +126,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
 													<h3><a href="#">Oracles</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -163,7 +163,7 @@
 										<div class="col-12 col-12-medium">
 											<section>
 											
-												<a href="#" class="image featured"><center><div id="custom"><img src="images/pic01.jpg" alt=""/></div><center></a>
+												<a href="#" class="image featured"><center><div id="custom"><img src="images/pdf.png" alt=""/></div><center></a>
 												<header>
 													<h3><a href="#">Questionnaire</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -195,7 +195,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
 													<h3><a href="#">UPV1</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -204,7 +204,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
 													<h3><a href="#">UPV2</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -213,7 +213,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
 													<h3><a href="#">UNA</a></h3>
 													<!--<p>And another subtitle</p>-->
@@ -222,7 +222,7 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
 													<h3><a href="#">UPV3</a></h3>
 													<!--<p>And another subtitle</p>-->
