--- a/index.html
+++ b/index.html
@@ -54,36 +54,36 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/ppt.png" alt="" /></a>
+												<a href="./files/Introduction.zip" class="image featured"><img src="images/ppt.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Introduction</a></h3>
+													<h3><a href="./files/Introduction.zip">Introduction</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
+												<a href="./files/Guides.zip" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Guides</a></h3>
+													<h3><a href="./files/Guides.zip">Guides</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
+												<a href="./files/Training.zip" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Training</a></h3>
+													<h3><a href="./files/Training.zip">Training</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
+												<a href="./files/Training Solution.zip" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Solution</a></h3>
+													<h3><a href="./files/Training Solution.zip">Solution</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
@@ -117,18 +117,18 @@
 										</div>
 										<div class="col-3 col-12-medium	">
 											<section>
-												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
+												<a href="./files/Experimental Objects.zip" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Experimental objects</a></h3>
+													<h3><a href="./files/Experimental Objects.zip">Experimental objects</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/pdf.png" alt="" /></a>
+												<a href="./files/Oracles.zip" class="image featured"><img src="images/pdf.png" alt="" /></a>
 												<header>
-													<h3><a href="#">Oracles</a></h3>
+													<h3><a href="./files/Oracles.zip">Oracles</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
@@ -163,9 +163,9 @@
 										<div class="col-12 col-12-medium">
 											<section>
 											
-												<a href="#" class="image featured"><center><div id="custom"><img src="images/pdf.png" alt=""/></div><center></a>
+												<a href="./files/Survey.pdf" class="image featured"><center><div id="custom"><img src="images/pdf.png" alt=""/></div><center></a>
 												<header>
-													<h3><a href="#">Questionnaire</a></h3>
+													<h3><a href="./files/Survey.pdf">Questionnaire</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
@@ -195,36 +195,36 @@
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
+												<a href="./files/data/UPV1.csv" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
-													<h3><a href="#">UPV1</a></h3>
+													<h3><a href="./files/data/UPV1.csv">UPV1</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
+												<a href="./files/data/UPV2.csv" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
-													<h3><a href="#">UPV2</a></h3>
+													<h3><a href="./files/data/UPV2.csv">UPV2</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
+												<a href="./files/data/UNA.csv" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
-													<h3><a href="#">UNA</a></h3>
+													<h3><a href="./files/data/UNA.csv">UNA</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
 										</div>
 										<div class="col-3 col-12-medium">
 											<section>
-												<a href="#" class="image featured"><img src="images/xls.png" alt="" /></a>
+												<a href="./files/data/UPV3.csv" class="image featured"><img src="images/xls.png" alt="" /></a>
 												<header>
-													<h3><a href="#">UPV3</a></h3>
+													<h3><a href="./files/data/UPV3.csv">UPV3</a></h3>
 													<!--<p>And another subtitle</p>-->
 												</header>
 											</section>
